k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: northstar
  labels:
    app.kubernetes.io/name: northstar-bank
    environment: dev
