k8s/dev/core-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: northstar-core-api
  namespace: northstar
  labels:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: core-api
spec:
  selector:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: core-api
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northstar-core-api
  namespace: northstar
  labels:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: core-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: northstar-bank
      app.kubernetes.io/component: core-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: northstar-bank
        app.kubernetes.io/component: core-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: northstar-bank
              app.kubernetes.io/component: core-api
      containers:
        - name: core-api
          image: 942909611186.dkr.ecr.us-east-1.amazonaws.com/northstar-core-api:sha-e2908c8bb7097d26c8af22c988ed214144d9d8e4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
