k8s/dev/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: northstar-web
  namespace: northstar
  labels:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northstar-web
  namespace: northstar
  labels:
    app.kubernetes.io/name: northstar-bank
    app.kubernetes.io/component: web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: northstar-bank
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: northstar-bank
        app.kubernetes.io/component: web
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: northstar-bank
              app.kubernetes.io/component: web
      containers:
        - name: web
          image: 942909611186.dkr.ecr.us-east-1.amazonaws.com/northstar-web:sha-ad99e0b2b1e5e07bdebd4a0cc88eb0a31d8d0450
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 1001
            runAsGroup: 1001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
